setting up base wireframe

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,14 +3,37 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <title></title>
   </head>
   <body>
+    <!-- all elements getting a borders class assignment for formatting -->
 
 
+    <!-- header below -->
+    <header class="header borders">
+      <!-- Insert Logo and Logo text here -->&nbsp;
+      <nav class="nav-bar borders">
+        <!-- Insert navigation items here -->&nbsp;
+      </nav>
+    </header>
+    <!-- end header -->
+
+    <!-- insert new projects here, newest to oldest -->
+    <article class="projects borders"> &nbsp;asdasdas
+    </article>
+
+    <!-- insert new projects here, newest to oldest -->
+    <article class="projects borders">&nbsp;dasd
+    </article>
+
+
+
+
+    <!-- start footer -->
+    <footer class="footer borders">&nbsp;asdsad</footer>
     <script type="text/javascript" src="/scripts/app.js">
     </script>
   </body>
