--- a/index.html
+++ b/index.html
@@ -3,19 +3,39 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <title></title>
   </head>
   <body>
-    <header class="header">
-      <!-- Insert Logo and Logo text here -->
-      <nav class="nav-bar">
-        <!-- Insert navigation items here -->
-      </nav>
-    </header>
+    <!-- all elements getting a divs class assignment for formatting -->
 
+
+    <!-- header below -->
+    <header class="header divs">
+      &nbsp;
+      <!-- Insert Logo and Logo text here -->
+    </header>
+    <nav class="nav-bar divs">
+      <!-- Insert navigation items here -->
+      &nbsp;
+    </nav>
+    <!-- end header -->
+
+    <!-- insert new projects here, newest to oldest -->
+    <article class="projects divs"> &nbsp;
+    </article>
+
+    <!-- insert new projects here, newest to oldest -->
+    <article class="projects divs">&nbsp;
+    </article>
+
+
+
+
+    <!-- start footer -->
+    <footer class="footer borders">&nbsp;</footer>
     <script type="text/javascript" src="/scripts/app.js">
     </script>
   </body>
