--- a/index.html
+++ b/index.html
@@ -11,25 +11,43 @@
   <body>
     <!-- all elements getting a divs class assignment for formatting -->
 
-
     <!-- header below -->
     <header class="header divs">
       &nbsp;
       <!-- Insert Logo and Logo text here -->
     </header>
+
     <nav class="nav-bar divs">
       <!-- Insert navigation items here -->
       &nbsp;
     </nav>
     <!-- end header -->
 
-    <!-- insert new projects here, newest to oldest -->
-    <article class="projects divs"> &nbsp;
+    <!-- TABLE OF CONTENTS FLOATED LEFT ASIDE -->
+    <aside class="table-of-contents divs">
+      <ul>
+        <li>This</li>
+        <li>That</li>
+        <li>This</li>
+      </ul>
+    </aside>
+    <!-- end table of contents -->
+
+    <!-- Main setup for the slideshow -->
+    <article class="slideshow divs">
+
     </article>
 
+
+
+
     <!-- insert new projects here, newest to oldest -->
-    <article class="projects divs">&nbsp;
-    </article>
+    <!-- <article class="projects divs" id="project-1"> &nbsp;
+    </article> -->
+
+    <!-- insert new projects here, newest to oldest -->
+    <!-- <article class="projects divs" id="project-2">&nbsp;
+    </article> -->
 
 
 
