why does linux exist

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -12,29 +13,43 @@
     <!-- all elements getting a divs class assignment for formatting -->
 
     <!-- header below -->
+    <nav class="nav-bar divs">
+      <!-- Insert navigation items here -->
+      &nbsp;
+    </nav>
+
     <header class="header divs">
       &nbsp;
       <!-- Insert Logo and Logo text here -->
     </header>
 
-    <nav class="nav-bar divs">
-      <!-- Insert navigation items here -->
-      &nbsp;
-    </nav>
     <!-- end header -->
 
     <!-- TABLE OF CONTENTS FLOATED LEFT ASIDE -->
     <aside class="table-of-contents divs">
+      <h3>Table of Contents</h3>
       <ul>
-        <li>This</li>
-        <li>That</li>
-        <li>This</li>
+        <li>Project 1</li>
+        <li>Project 2</li>
+        <li>Project 3</li>
       </ul>
     </aside>
     <!-- end table of contents -->
 
     <!-- Main setup for the slideshow -->
     <article class="slideshow divs">
+      <!-- slideshow pictures -->
+      <img class="mySlides" src="img/slideshow-1.png" alt>
+      <img class="mySlides" src="img/slideshow-2.png" alt>
+      <img class="mySlides" src="img/slideshow-3.png" alt>
+      <img class="mySlides" src="img/slideshow-4.png" alt>
+      <img class="mySlides" src="img/slideshow-5.png" alt>
+
+      <!-- Slideshow buttons -->
+      <button class="w3-button w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+      <button class="w3-button w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
+
+
 
     </article>
 
