finished main layout wireframes, working on slideshow now

--- a/index.html
+++ b/index.html
@@ -34,27 +34,28 @@
         <li>Project 3</li>
       </ul>
     </aside>
-    <!-- end table of contents -->
 
     <!-- Main setup for the slideshow -->
-    <article class="slideshow divs">
+    <article class="slideshow-article divs">
       <!-- slideshow pictures -->
-      <img class="mySlides" src="img/slideshow-1.png" alt>
-      <img class="mySlides" src="img/slideshow-2.png" alt>
-      <img class="mySlides" src="img/slideshow-3.png" alt>
-      <img class="mySlides" src="img/slideshow-4.png" alt>
-      <img class="mySlides" src="img/slideshow-5.png" alt>
+      <ul class="slideshow">
+        <li class="my-slides"><img src="img/slide-01.jpg" alt></li>
+        <li class="my-slides"><img src="img/slide-02.jpg" alt></li>
+        <li class="my-slides"><img src="img/slide-03.jpg" alt></li>
+        <li class="my-slides"><img src="img/slide-04.jpg" alt></li>
+        <li class="my-slides"><img src="img/slide-05.jpg" alt></li>
+      </ul>
 
       <!-- Slideshow buttons -->
-      <button class="w3-button w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
-      <button class="w3-button w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
+      <button class="button display-left" onclick="plusDivs(-1)">&#10094;</button>
+      <button class="button display-right" onclick="plusDivs(+1)">&#10095;</button>
+
+
+
 
 
 
     </article>
-
-
-
 
     <!-- insert new projects here, newest to oldest -->
     <!-- <article class="projects divs" id="project-1"> &nbsp;
