--- a/index.html
+++ b/index.html
@@ -36,19 +36,22 @@
     </aside>
 
     <!-- Main setup for the slideshow -->
-    <article class="slideshow-article divs">
+    <article id="slideshow-article" class="divs">
       <!-- slideshow pictures -->
-      <ul class="slideshow">
-        <li class="my-slides"><img src="img/slide-01.jpg" alt></li>
-        <li class="my-slides"><img src="img/slide-02.jpg" alt></li>
-        <li class="my-slides"><img src="img/slide-03.jpg" alt></li>
-        <li class="my-slides"><img src="img/slide-04.jpg" alt></li>
-        <li class="my-slides"><img src="img/slide-05.jpg" alt></li>
-      </ul>
-
+      <div class="slideshow-div">
+        <ul class="slideshow">
+          <li class="my-slides"><img src="img/slide-01.jpg" alt></li>
+          <li class="my-slides"><img src="img/slide-02.jpg" alt></li>
+          <li class="my-slides"><img src="img/slide-03.jpg" alt></li>
+          <li class="my-slides"><img src="img/slide-04.jpg" alt></li>
+          <li class="my-slides"><img src="img/slide-05.jpg" alt></li>
+          <li class="my-slides"><img src="img/slide-06.jpg" alt></li>
+        </ul>
+      </div>
+wat
       <!-- Slideshow buttons -->
-      <button class="button display-left" onclick="plusDivs(-1)">&#10094;</button>
-      <button class="button display-right" onclick="plusDivs(+1)">&#10095;</button>
+      <!-- <button class="button display-left" onclick="plusDivs(-1)">&#10094;</button>
+      <button class="button display-right" onclick="plusDivs(+1)">&#10095;</button> -->
 
 
 
@@ -71,6 +74,8 @@
     <!-- start footer -->
     <footer class="footer borders">&nbsp;</footer>
     <script type="text/javascript" src="/scripts/app.js">
+    </script>
+    <script type="text/javascript" src="/scripts/slideshow.js">
     </script>
   </body>
 </html>
