--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
-    <link rel="stylesheet" href="vendor/style/reset.css">
+    <link rel="stylesheet" href="vendor/styles/reset.css">
     <!-- <link rel="stylesheet" href="css/style.css"> -->
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/modules.css">
@@ -56,10 +56,6 @@
       <!-- Slideshow buttons -->
       <!-- <button class="button display-left" onclick="plusDivs(-1)">&#10094;</button>
       <button class="button display-right" onclick="plusDivs(+1)">&#10095;</button> -->
-
-
-
-
 
 
     </article>
