--- a/index.html
+++ b/index.html
@@ -68,6 +68,17 @@
     <!-- <article class="projects divs" id="project-2">&nbsp;
     </article> -->
 
+    <!-- JACKED TEMPLATE FROM 301d18 lab 2 -->
+    <!-- <main>
+      <section id="slideshow">
+        <article class="template" data-category="cat">
+          <header>
+            <address><a href="#insertanchor here."><h1>Title</h1></a></address>
+          </header>
+          <section class="summary-body"></section>
+        </article>
+      </section>
+    </main> -->
 
 
 
