--- a/index.html
+++ b/index.html
@@ -58,27 +58,13 @@
       </div> -->
 
       <!-- Owl Carousel Formatting -->
-      <div class="owl-carousel owl-theme" id="slideshow-article divs  ">
-        <ul class="slideshow">
-          <li class="item my-slides"><img src="img/slide-01.jpg" alt></li>
-          <li class="item my-slides"><img src="img/slide-02.jpg" alt></li>
-          <li class="item my-slides"><img src="img/slide-03.jpg" alt></li>
-          <li class="item my-slides"><img src="img/slide-04.jpg" alt></li>
-          <li class="item my-slides"><img src="img/slide-05.jpg" alt></li>
-          <li class="item my-slides"><img src="img/slide-06.jpg" alt></li>
-        </ul>
-          <!-- <div class="item"><h4><img src="img/slide-01.jpg" alt></h4></div>
-          <div class="item"><h4><img src="img/slide-01.jpg" alt></h4></div>
-          <div class="item"><h4><img src="img/slide-01.jpg" alt></h4></div>
-          <div class="item"><h4>4</h4></div>
-          <div class="item"><h4>5</h4></div>
-          <div class="item"><h4>6</h4></div>
-          <div class="item"><h4>7</h4></div>
-          <div class="item"><h4>8</h4></div>
-          <div class="item"><h4>9</h4></div>
-          <div class="item"><h4>10</h4></div>
-          <div class="item"><h4>11</h4></div>
-          <div class="item"><h4>12</h4></div> -->
+      <div class="owl-carousel owl-theme divs" id="slideshow-article">
+          <div class="item"><img src="img/slide-01.jpg" alt></div>
+          <div class="item"><img src="img/slide-02.jpg" alt></div>
+          <div class="item"><img src="img/slide-03.jpg" alt></div>
+          <div class="item"><img src="img/slide-04.jpg" alt></div>
+          <div class="item"><img src="img/slide-05.jpg" alt></div>
+          <div class="item"><img src="img/slide-06.jpg" alt></div>
       </div>
 
       <!-- Slideshow buttons -->
