--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="vendor/styles/reset.css">
     <!-- owl carousel links -->
     <link rel="stylesheet" href="owl-carousel/assets/owl.carousel.min.css">
-    <link rel="stylesheet" href="owl-carousel/assets/owl.theme.default.min.css">
+    <link rel="stylesheet" href="owl-carousel/assets/owl.theme.default.css">
     <!-- <link rel="stylesheet" href="css/style.css"> -->
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/modules.css">
