working on logo and hamburgurr menu sizing in the header

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <title></title>
   </head>
+
   <body>
     <!-- all elements getting a divs class assignment for formatting -->
 
@@ -29,9 +30,9 @@
     <header class="header divs">
       &nbsp;
       <!-- Insert Logo and Logo text here -->
+      IMALOGOHURR
+      <nav class="nav-burger">&#9776;</nav>
     </header>
-
-    <!-- end header -->
 
       <!-- Owl Carousel Formatting -->
       <div class="owl-carousel owl-theme divs" id="slideshow-article">
