nav bar coming along

--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
     <!-- header below -->
     <nav class="nav-bar divs">
       <!-- Insert navigation items here -->
+      <a href="#table-of-contents">Projects</a>
+      <a href="#about-me">About</a>
       &nbsp;
     </nav>
 
     <header class="header divs">
-      &nbsp;
       <!-- Insert Logo and Logo text here -->
       IMALOGOHURR
       <nav class="nav-burger">&#9776;</nav>
@@ -45,13 +46,18 @@
       </div>
       <!-- TABLE OF CONTENTS FLOATED LEFT ASIDE -->
       <aside class="table-of-contents divs">
-        <h3>Table of Contents</h3>
+        <a name="table-of-contents"><h3>Table of Contents</h3></a>
         <ul>
+          <li>Introduction</li>
           <li>Project 1</li>
           <li>Project 2</li>
           <li>Project 3</li>
         </ul>
       </aside>
+      <article class="main-intro divs" name="about-me">
+        <h2>Introduction</h2>
+
+      </article>
     <!-- insert new projects here, newest to oldest -->
     <!-- <article class="projects divs" id="project-1"> &nbsp;
     </article> -->
