got the majority of the mobile to desktop formatting complete

--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
       </div>
       <!-- TABLE OF CONTENTS FLOATED LEFT ASIDE -->
       <aside class="table-of-contents divs">
-        <a name="table-of-contents"><h3>Table of Contents</h3></a>
+        <a name="table-of-contents">Contents</a>
         <ul>
-          <li>Introduction</li>
+          <li>Intro</li>
           <li>Project 1</li>
           <li>Project 2</li>
           <li>Project 3</li>
         </ul>
       </aside>
       <article class="main-intro divs" name="about-me">
-        <h2>Introduction</h2>
+        Introduction
 
       </article>
     <!-- insert new projects here, newest to oldest -->
