--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="owl-carousel/assets/owl.theme.default.css">
     <!-- <link rel="stylesheet" href="css/style.css"> -->
     <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/modules.css">
     <link rel="stylesheet" href="css/icons.css">
     <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/modules.css">
     <!-- jQ 3.1.1 -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <title></title>
@@ -55,7 +55,7 @@
         </ul>
       </aside>
       <article class="main-intro divs" name="about-me">
-        Introduction
+        <h1>Introduction</h1>
 
       </article>
     <!-- insert new projects here, newest to oldest -->
