things populate based on what you click in contents

--- a/index.html
+++ b/index.html
@@ -35,11 +35,9 @@
     <!-- header below -->
     <nav class="nav-bar divs">
       <!-- Insert navigation items here -->
-      <a href="#table-of-contents">
-        <strong>Projects</strong>
-      </a>
-      <a href="#about-me">About</a>
-      &nbsp;
+      <a href="#home-nav" id="home-nav">Home</a>&nbsp;
+      <a href="#about-me" id="about-me">About</a>&nbsp;
+      <a href="#portfolio" id="portfolio">Portfolio</a>&nbsp;
     </nav>
 
     <header class="header divs">
@@ -65,7 +63,8 @@
       </aside>
       <main id="projects-here" class="main-intro divs">
         <!-- Add intro here, with the about me, -->
-        <article id="intro">
+        <article id="main-nav-body">
+          Bird Bird Bird
         </article>
         <!-- Add projects to this article -->
         <article id="projects-here">
