formatting on the main works, working on getting the home to be the default config on page load

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <!-- Insert navigation items here -->
       <a href="#home-nav" id="home-nav">Home</a>&nbsp;
       <a href="#about-me" id="about-me">About</a>&nbsp;
-      <a href="#portfolio" id="portfolio">Portfolio</a>&nbsp;
+      <a href="#portfolio" id="portfolio-nav">Portfolio</a>&nbsp;
     </nav>
 
     <header class="header divs">
@@ -61,6 +61,8 @@
         <ul id="table-of-contents-list">
         </ul>
       </aside>
+
+      <!-- main document body -->
       <main id="projects-here" class="main-intro divs">
         <!-- Add intro here, with the about me, -->
         <article id="main-nav-body">
