generate about page/etc

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <!-- Handlebars Template -->
     <script id="project-template" type="text/x-handlebars-template">
-      <article data-project="{{title}}" id="{{title}}">
+      <article class="the-projects" data-project="{{title}}" id="{{title}}">
       <p>{{title}}</p
       <p>{{contributors}}</p>
       <p>{{class}}</p>
@@ -69,7 +69,8 @@
           Bird Bird Bird
         </article>
         <!-- Add projects to this article -->
-
+        <article id="projects-here-pls">
+        </article>
 
 
       </main>
