mobile nav-burger

--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
     <!-- header below -->
     <nav class="nav-bar divs">
       <!-- Insert navigation items here -->
-      <a href="#home-nav" id="home-nav">Home</a>&nbsp;
-      <a href="#about-me" id="about-me">About</a>&nbsp;
-      <a href="#portfolio" id="portfolio-nav">Portfolio</a>&nbsp;
       <nav class="nav-burger">&#9776;</nav>
+      <div class="slide-left">
+        <a href="#home-nav" id="home-nav">Home</a>
+        <a href="#about-me" id="about-me">About</a>
+        <a href="#portfolio" id="portfolio-nav">Portfolio</a>
+      </div>
     </nav>
 
     <header class="header divs">
