--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </aside>
 
       <!-- main document body -->
-      <main id="projects-here" class="main-intro divs">
+      <main class="main-intro divs">
         <!-- Add intro here, with the about me, -->
         <article id="main-nav-body">
           <div>
@@ -92,7 +92,7 @@
           </div>
         </article>
         <!-- Add projects to this article -->
-        <article id="projects-here-pls">
+        <article id="projects-here">
         </article>
 
 
@@ -106,7 +106,6 @@
     </footer>
     <!-- JS Docs -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.js"></script>
-    <script type="text/javascript" src="scripts/rawData.js"></script>
     <script type="text/javascript" src="scripts/slideshow.js"></script>
     <script type="text/javascript" src="scripts/app.js"></script>
   </body>
