more imgs added!

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     <script id="project-template" type="text/x-handlebars-template">
       <article class="the-projects" data-project="{{title}}" id="{{title}}">
       <h3>{{title}}</h3>
+      <img src="{{screenshot}}" alt></img>
       <h4>{{contributors}}</h4>
       <h4>{{class}}, {{week}}</h4>
       <a href="{{projectUrl}}">Show me the money &rarr;</a>
