--- a/public/index.html
+++ b/public/index.html
@@ -56,11 +56,10 @@
 
       <!-- Owl Carousel Formatting -->
       <div class="owl-carousel owl-theme divs" id="slideshow-article">
-          <div class="item"><img src="img/slide-01.jpg" alt></div>
-          <div class="item"><img src="img/slide-02.jpg" alt></div>
-          <div class="item"><img src="img/slide-03.jpg" alt></div>
-          <div class="item"><img src="img/slide-04.jpg" alt></div>
-          <div class="item"><img src="img/slide-05.jpg" alt></div>
+          <div class="item"><img src="img/get-fit.png" alt></div>
+          <div class="item"><img src="img/bus-mall-main-page.png" alt></div>
+          <div class="item"><img src="img/salmon-cookies-main-page.png" alt></div>
+          <div class="item"><img src="img/about-me.png" alt></div>
       </div>
 
       <!-- TABLE OF CONTENTS FLOATED LEFT ASIDE -->
