got the hovers, screenshots for most applications, still haven't touch sql

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
       <img src="{{screenshot}}" alt></img>
       <h4>{{contributors}}</h4>
       <h4>{{class}}, {{week}}</h4>
+      <h4>{{goal}}</h4>
       <a href="{{projectUrl}}">Show me the money &rarr;</a>
     </article>
     </script>
