--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <!-- fonts -->
     <!-- <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet"> -->
     <link href="https://fonts.googleapis.com/css?family=Signika" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great" rel="stylesheet">
 
     <!-- css sheets -->
     <link rel="stylesheet" href="vendor/styles/reset.css">
@@ -52,7 +53,7 @@
 
     <header class="header divs">
       <!-- Insert Logo and Logo text here -->
-      IMALOGO
+      aesthetiques
     </header>
 
       <!-- Owl Carousel Formatting -->
