--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,6 @@
       <a href="{{projectUrl}}">Show me the money &rarr;</a>
     </article>
     </script>
-
     <title></title>
   </head>
 
@@ -53,10 +52,10 @@
 
       <!-- Owl Carousel Formatting -->
       <div class="owl-carousel owl-theme divs" id="slideshow-article">
-          <div class="item"><img src="img/get-fit.png" alt></div>
-          <div class="item"><img src="img/bus-mall-main-page.png" alt></div>
-          <div class="item"><img src="img/salmon-cookies-main-page.png" alt></div>
-          <div class="item"><img src="img/about-me.png" alt></div>
+        <div class="item"><img src="img/get-fit.png" alt></div>
+        <div class="item"><img src="img/bus-mall-main-page.png" alt></div>
+        <div class="item"><img src="img/salmon-cookies-main-page.png" alt></div>
+        <div class="item"><img src="img/about-me.png" alt></div>
       </div>
 
       <!-- TABLE OF CONTENTS FLOATED LEFT ASIDE -->
@@ -68,6 +67,7 @@
 
       <!-- main document body -->
       <main id="content" class="main-intro divs">
+
         <!-- Add intro here, with the about me, -->
         <article id="index-body">
           <div>
@@ -78,34 +78,36 @@
           <br>
           <div>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce dignissim massa et urna ullamcorper, id scelerisque sapien viverra. Quisque vel elit porttitor, condimentum ante at, sollicitudin neque. Curabitur non tempor purus, non mattis mi. Phasellus varius iaculis sapien, a lobortis eros ornare a. Curabitur suscipit nibh justo, et elementum metus pulvinar ac. Donec ac justo sem. Proin pulvinar pretium nisi ac viverra. Pellentesque id dignissim enim, id tristique sapien.</p>
-
             <p>Mauris placerat est nec ultrices venenatis. Integer est leo, hendrerit a consectetur id, tempus eget ligula. Etiam et lacinia sem, sed tincidunt quam. Duis molestie est velit, non posuere elit facilisis non. In porttitor efficitur dapibus. Duis rutrum enim non purus pharetra, non interdum massa placerat. Etiam lorem nulla, luctus sed nulla in, tempor eleifend dolor. Aliquam molestie sem eget accumsan suscipit. Curabitur quis dui lorem.</p>
-
             <p>Donec eget porttitor augue, id scelerisque leo. Praesent vitae dignissim erat. Nullam turpis risus, fringilla quis purus eu, efficitur pulvinar nisi. Sed in quam fermentum, sollicitudin sem a, bibendum est. Curabitur vel leo urna. Pellentesque non purus nec nulla sollicitudin egestas. Duis semper et ligula porta luctus. Duis bibendum urna eu ipsum auctor suscipit. Morbi sed orci ac dui sollicitudin egestas. In hac habitasse platea dictumst. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-
             <p>Cras consequat libero ornare, ultricies odio vitae, interdum erat. Suspendisse venenatis efficitur velit a varius. Nam tristique massa quis ante ultrices posuere. Quisque ultrices enim diam, ut vehicula magna pharetra id. Donec imperdiet ipsum fermentum, suscipit elit sit amet, ornare urna. Integer erat tortor, ornare ullamcorper ante cursus, egestas hendrerit lacus. Sed elementum enim quis massa luctus congue. Suspendisse eget venenatis lacus, ut porttitor nibh.</p>
-
             <p>Vivamus iaculis blandit dictum. Ut tincidunt hendrerit ligula nec euismod. Nulla facilisi. Donec ipsum elit, commodo sit amet justo sit amet, facilisis blandit dui. Nam sed tortor orci. Sed scelerisque faucibus risus in pharetra. Cras ullamcorper dapibus sem, ut varius nulla ultricies at. Suspendisse metus justo, vehicula in metus in, mattis pharetra orci.</p>
         </div>
         </article>
+
         <!-- Add projects to this article -->
-        <article id="project-index">
+        <article id="project-body">
         </article>
 
+        <!-- Add projects to this article -->
+        <article id="about-body">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce dignissim massa et urna ullamcorper, id scelerisque sapien viverra. Quisque vel elit porttitor, condimentum ante at, sollicitudin neque. Curabitur non tempor purus, non mattis mi. Phasellus varius iaculis sapien, a lobortis eros ornare a. Curabitur suscipit nibh justo, et elementum metus pulvinar ac. Donec ac justo sem. Proin pulvinar pretium nisi ac viverra. Pellentesque id dignissim enim, id tristique sapien.</p>
+        </article>
 
       </main>
 
     <!-- start footer -->
     <footer class="footer borders">
-      <!-- AS PER Owl Carousel Instructions -->
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-      <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
-      <script src="owl-carousel/owl.carousel.min.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.js"></script>
     </footer>
+
+    <!-- AS PER Owl Carousel Instructions -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdn.rawgit.com/visionmedia/page.js/master/page.js"></script>
+    <script src="owl-carousel/owl.carousel.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.js"></script>
     <!-- JS Docs -->
     <script type="text/javascript" src="scripts/slideshow.js"></script>
-    <script type="text/javascript" src="scripts/app.js"></script>
+    <script type="text/javascript" src="scripts/models/dataModel.js"></script>
     <script type="text/javascript" src="scripts/views/homeView.js"></script>
     <script type="text/javascript" src="scripts/views/aboutView.js"></script>
     <script type="text/javascript" src="scripts/views/portfolioView.js"></script>
