--- a/public/index.html
+++ b/public/index.html
@@ -106,7 +106,7 @@
     <script src="owl-carousel/owl.carousel.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.js"></script>
     <!-- JS Docs -->
-    <script type="text/javascript" src="scripts/slideshow.js"></script>
+    <script type="text/javascript" src="scripts/models/slideshow.js"></script>
     <script type="text/javascript" src="scripts/models/dataModel.js"></script>
     <script type="text/javascript" src="scripts/views/homeView.js"></script>
     <script type="text/javascript" src="scripts/views/aboutView.js"></script>
