--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,8 @@
 
       <!-- TABLE OF CONTENTS FLOATED LEFT ASIDE -->
       <aside class="table-of-contents divs">
-        <a name="table-of-contents portfolio-page">Contents</a>
+        Contents
+        <a id="show-all">Show All</a>
         <ul id="table-of-contents-list">
         </ul>
       </aside>
