--- a/public/index.html
+++ b/public/index.html
@@ -107,8 +107,10 @@
     <script src="owl-carousel/owl.carousel.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.js"></script>
     <!-- JS Docs -->
+    <script type="text/javascript" src="scripts/models/github-token.js"></script>
     <script type="text/javascript" src="scripts/models/slideshow.js"></script>
     <script type="text/javascript" src="scripts/models/dataModel.js"></script>
+    <script type="text/javascript" src="scripts/models/repoModel.js"></script>
     <script type="text/javascript" src="scripts/views/homeView.js"></script>
     <script type="text/javascript" src="scripts/views/aboutView.js"></script>
     <script type="text/javascript" src="scripts/views/portfolioView.js"></script>
